--- a/public/css/themes.css
+++ b/public/css/themes.css
@@ -1,8 +1,8 @@
-body[theme="rose_gold"] {
+body[theme="main"] {
     --text-color: #ffffff;
-    --background: #f3a683;
-    --navbar: #e79a58;
-    --accent: #ff9a8b;
+    --background: url("https://images.unsplash.com/photo-1754851541354-081c37f1316c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDE5MXxDRHd1d1hKQWJFd3x8ZW58MHx8fHx8");
+    --navbar: ##001126;
+    --accent: ##0f2c4f;
 }
 body[theme="midnight"] {
     --text-color: white;
@@ -10,7 +10,7 @@ body[theme="midnight"] {
     --navbar: #0e1213;
     --accent: #0284d4;
 }
-body[theme="main"] {
+body[theme="artclass"] {
     --text-color: white;
     --background: #1a2023;
     --navbar: #0e1213;
