--- a/public/css/themes.css
+++ b/public/css/themes.css
@@ -1,6 +1,6 @@
 body[theme="main"] {
     --text-color: #ffffff;
-    --background: url("https://images.unsplash.com/photo-1753837738732-46691c8e923b?w=1720&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDE5M3xDRHd1d1hKQWJFd3x8ZW58MHx8fHx8");
+    --background: linear-gradient(#6d7b8c, #394554);
     --navbar: #001126;
     --accent: #0f2c4f;
 }
