--- a/public/css/themes.css
+++ b/public/css/themes.css
@@ -86,5 +86,5 @@ body[theme="modern"] {
 }
 body[theme="galaxy"] {
     --text-color: white;
-    --background: url("https://cdn.dribbble.com/userupload/21049699/file/original-e7bea7f104918effabdde436c680a8ea.gif");
+    --background: url("https://images.unsplash.com/photo-1502134249126-9f3755a50d78?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     --accent: #2c0252;
