--- a/public/css/themes.css
+++ b/public/css/themes.css
@@ -1,6 +1,7 @@
 body[theme="main"] {
     --text-color: black;
     --background: linear-gradient(#b3edab, #3e9432);
+    --navbar: #0d5a03
     --accent: #93ef87;
 }
 body[theme="midnight"] {
