--- a/public/css/themes.css
+++ b/public/css/themes.css
@@ -101,3 +101,9 @@ body[theme="neru"] {
     --navbar: #474744;
     --accent: #d9d213;
 }
+body[theme="rain"] {
+    --text-color: white;
+    --background: url("https://cdnb.artstation.com/p/assets/images/images/023/743/143/original/valentin-hume-rainymoodresized.gif?1580214826");
+    --navbar: #aba6a6;
+    --accent: url("https://i.pinimg.com/originals/ca/0e/95/ca0e95b709b975f9e48be1f932f44d64.gif");
+}
