--- a/public/css/themes.css
+++ b/public/css/themes.css
@@ -1,5 +1,5 @@
 body[theme="main"] {
-    --text-color: #6ac4c2;
+    --text-color: white;
     --background: linear-gradient(#429e9d, #197e7c);
     --navbar: #005c5a;
     --accent: #0ec0bd;
