--- a/public/css/themes.css
+++ b/public/css/themes.css
@@ -102,10 +102,10 @@ body[theme="neru"] {
     --accent: #d9d213;
 }
 body[theme="weather"] {
-    --text-color: white;
+    --text-color: #9cb3e5;
     --background: url("https://pbs.twimg.com/media/GgfW2XVXEAAyoMa.jpg");
-    --navbar: #aba6a6;
-    --accent: #0956a5;
+    --navbar: #6060ba;
+    --accent: white;
 }
 body[theme="interstellar"] {
     --text-color: white;
